--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/Graph_Learning/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My GraphQL Profile</title>
-    <script type="module" crossorigin src="/graphql/assets/main-t6znaLjg.js"></script>
-    <link rel="stylesheet" crossorigin href="/graphql/assets/main-66u51UuV.css">
+    
+    <script type="module" crossorigin src="/graphql/assets/main.25606577.js"></script>
+    <link rel="stylesheet" href="/graphql/assets/main.adc7b506.css">
   </head>
   <body>
     <div id="root"></div>
+    
   </body>
 </html>
